Add NFC tag key to self profiles
